--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -6,4 +6,4 @@ $cards: rgb(96, 0, 164);
 
 // Variables de tipografía
 $fontFamilyBase: 'SuecaSlab', sans-serif;
-$fontFamilySecondBase: 'Arial', sans-serif;
+$fontFamilySecondBase: 'Arial', sans-serif
