--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,7 +9,7 @@
 @import './navbar';
 @import './home';
 @import './firstNew';
-@import './articlecard';
-@import './leftfocusedarticle';
-@import './cardgroupcolor';
+@import './articleCard';
+@import './leftFocusedArticle';
+@import './cardGroupColor';
 @import './footer';
